--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
   },
   "homepage": "https://github.com/ZXinL-CN/helper#readme",
   "devDependencies": {
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.5",
     "jest": "^25.5.4",
     "rimraf": "^4.4.0",
-    "rollup": "^3.20.0"
+    "rollup": "^3.20.0",
+    "ts-jest": "^29.0.5",
+    "typescript": "^5.0.2"
   },
   "dependencies": {
     "@babel/core": "^7.21.3",
