--- a/package.json
+++ b/package.json
@@ -23,19 +23,18 @@
   },
   "homepage": "https://github.com/ZXinL-CN/helper#readme",
   "devDependencies": {
-    "@types/jest": "^29.5.0",
-    "@types/node": "^18.15.5",
-    "jest": "^25.5.4",
-    "rimraf": "^4.4.0",
-    "rollup": "^3.20.0",
-    "ts-jest": "^29.0.5",
-    "typescript": "^5.0.2"
-  },
-  "dependencies": {
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
-    "babel-jest": "^29.5.0"
+    "@types/jest": "^25.2.3",
+    "@types/node": "^18.15.5",
+    "babel-jest": "^25.5.1",
+    "jest": "^25.5.4",
+    "rimraf": "^4.4.1",
+    "rollup": "^3.20.0",
+    "ts-jest": "^25.5.1",
+    "typescript": "^3.9.10"
   },
+  "dependencies": {},
   "files": [
     "dist/"
   ],
