--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.1",
   "description": "> 🚀js 助手，各种数据处理方法集合",
   "main": "./dist/cjs/index.cjs.js",
+  "module": "./dist/esm/index.esm.js",
+  "types": "./dist/types/index.d.ts",
   "scripts": {
     "build": "rimraf ./dist/ && rollup --config",
     "copy": "copy README.md dist && copy package.json dist",
@@ -25,6 +27,10 @@
   "devDependencies": {
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@types/jest": "^25.2.3",
     "@types/node": "^18.15.5",
     "babel-jest": "^25.5.1",
@@ -34,7 +40,9 @@
     "ts-jest": "^25.5.1",
     "typescript": "^3.9.10"
   },
-  "dependencies": {},
+  "dependencies": {
+    "tslib": "^2.5.0"
+  },
   "files": [
     "dist/"
   ],
